// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageText
    block={
        Object {
            "fields": Object {
              "backgroundColor": "foo",
              "image": Object {
                "fields": Object {
                  "file": Object {
                    "contentType": "foo",
                    "details": Object {
                      "image": Object {
                        "height": 0,
                        "width": 0,
                      },
                      "size": 0,
                    },
                    "fileName": "foo",
                    "url": "foo",
                  },
                  "title": "foo",
                },
                "sys": Object {
                  "createdAt": "foo",
                  "environment": Object {
                    "sys": Object {
                      "id": "foo",
                      "linkType": "foo",
                      "type": "foo",
                    },
                  },
                  "id": "foo",
                  "locale": "foo",
                  "revision": 0,
                  "space": Object {
                    "sys": Object {
                      "id": "foo",
                      "linkType": "foo",
                      "type": "foo",
                    },
                  },
                  "type": "foo",
                  "updatedAt": "foo",
                },
              },
              "imagePosition": 0,
              "text": "foo",
              "title": "foo",
            },
          }
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="flex container-width py4"
>
          <div
                    className="flex flex-column justify-center col-12 md-col-6"
          >
                    <h2
                              className="block-headline mb3"
                    >
                              foo
                    </h2>
                    <div
                              className="markdown-block"
                              dangerouslySetInnerHTML={
                                        Object {
                                                  "__html": "<p>foo</p>
                                        ",
                                                }
                              }
                    />
                    <div
                              className="flex flex-row flex-wrap items-center"
                    >
                              
                    </div>
          </div>
          <Image
                    alt="foo illustration"
                    bg={false}
                    className="col-4 z-sub-nav mt2 mx-auto my-auto"
                    onImgLoad={[Function]}
                    src="foo?w=1400&fm=png&q=90"
                    style={
                              Object {
                                        "transform": "translate(0%, 0%)",
                                      }
                    }
          />
</div>,
        null,
      ],
      "className": "flex justify-center",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="flex flex-column justify-center col-12 md-col-6"
>
              <h2
                            className="block-headline mb3"
              >
                            foo
              </h2>
              <div
                            className="markdown-block"
                            dangerouslySetInnerHTML={
                                          Object {
                                                        "__html": "<p>foo</p>
                                          ",
                                                      }
                            }
              />
              <div
                            className="flex flex-row flex-wrap items-center"
              >
                            
              </div>
</div>,
            <Image
              alt="foo illustration"
              bg={false}
              className="col-4 z-sub-nav mt2 mx-auto my-auto"
              onImgLoad={[Function]}
              src="foo?w=1400&fm=png&q=90"
              style={
                            Object {
                                          "transform": "translate(0%, 0%)",
                                        }
              }
/>,
          ],
          "className": "flex container-width py4",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="block-headline mb3"
>
                  foo
</h2>,
                <div
                  className="markdown-block"
                  dangerouslySetInnerHTML={
                                    Object {
                                                      "__html": "<p>foo</p>
                                    ",
                                                    }
                  }
/>,
                <div
                  className="flex flex-row flex-wrap items-center"
>
                  
</div>,
                null,
              ],
              "className": "flex flex-column justify-center col-12 md-col-6",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo",
                  "className": "block-headline mb3",
                },
                "ref": null,
                "rendered": "foo",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "markdown-block",
                  "dangerouslySetInnerHTML": Object {
                    "__html": "<p>foo</p>
",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    null,
                    null,
                  ],
                  "className": "flex flex-row flex-wrap items-center",
                },
                "ref": null,
                "rendered": Array [
                  null,
                  null,
                ],
                "type": "div",
              },
              null,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alt": "foo illustration",
              "bg": false,
              "children": null,
              "className": "col-4 z-sub-nav mt2 mx-auto my-auto",
              "onImgLoad": [Function],
              "src": "foo?w=1400&fm=png&q=90",
              "style": Object {
                "transform": "translate(0%, 0%)",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex container-width py4"
>
            <div
                        className="flex flex-column justify-center col-12 md-col-6"
            >
                        <h2
                                    className="block-headline mb3"
                        >
                                    foo
                        </h2>
                        <div
                                    className="markdown-block"
                                    dangerouslySetInnerHTML={
                                                Object {
                                                            "__html": "<p>foo</p>
                                                ",
                                                          }
                                    }
                        />
                        <div
                                    className="flex flex-row flex-wrap items-center"
                        >
                                    
                        </div>
            </div>
            <Image
                        alt="foo illustration"
                        bg={false}
                        className="col-4 z-sub-nav mt2 mx-auto my-auto"
                        onImgLoad={[Function]}
                        src="foo?w=1400&fm=png&q=90"
                        style={
                                    Object {
                                                "transform": "translate(0%, 0%)",
                                              }
                        }
            />
</div>,
          null,
        ],
        "className": "flex justify-center",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="flex flex-column justify-center col-12 md-col-6"
>
                <h2
                                className="block-headline mb3"
                >
                                foo
                </h2>
                <div
                                className="markdown-block"
                                dangerouslySetInnerHTML={
                                                Object {
                                                                "__html": "<p>foo</p>
                                                ",
                                                              }
                                }
                />
                <div
                                className="flex flex-row flex-wrap items-center"
                >
                                
                </div>
</div>,
              <Image
                alt="foo illustration"
                bg={false}
                className="col-4 z-sub-nav mt2 mx-auto my-auto"
                onImgLoad={[Function]}
                src="foo?w=1400&fm=png&q=90"
                style={
                                Object {
                                                "transform": "translate(0%, 0%)",
                                              }
                }
/>,
            ],
            "className": "flex container-width py4",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="block-headline mb3"
>
                    foo
</h2>,
                  <div
                    className="markdown-block"
                    dangerouslySetInnerHTML={
                                        Object {
                                                            "__html": "<p>foo</p>
                                        ",
                                                          }
                    }
/>,
                  <div
                    className="flex flex-row flex-wrap items-center"
>
                    
</div>,
                  null,
                ],
                "className": "flex flex-column justify-center col-12 md-col-6",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "foo",
                    "className": "block-headline mb3",
                  },
                  "ref": null,
                  "rendered": "foo",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "markdown-block",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "<p>foo</p>
",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      null,
                      null,
                    ],
                    "className": "flex flex-row flex-wrap items-center",
                  },
                  "ref": null,
                  "rendered": Array [
                    null,
                    null,
                  ],
                  "type": "div",
                },
                null,
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alt": "foo illustration",
                "bg": false,
                "children": null,
                "className": "col-4 z-sub-nav mt2 mx-auto my-auto",
                "onImgLoad": [Function],
                "src": "foo?w=1400&fm=png&q=90",
                "style": Object {
                  "transform": "translate(0%, 0%)",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageText
    block={
        Object {
            "fields": Object {
              "backgroundColor": "pink",
              "buttonLabel": "",
              "buttonLink": "",
              "drip": false,
              "fullImage": false,
              "image": Object {
                "fields": Object {
                  "file": Object {
                    "url": "",
                  },
                  "title": "",
                },
                "sys": Object {
                  "id": "",
                },
              },
              "imagePositionX": 0,
              "imagePositionY": 0,
              "imageTextRatio": "50:50",
              "isReverseArrangement": false,
              "linkedTextLabel": "",
              "linkedTextLink": "",
              "text": "",
              "title": "",
            },
          }
    }
    setRef={[Function]}
    z={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="flex container-width py4"
>
          <div
                    className="flex flex-column justify-center col-12 md-col-5"
          >
                    <h2
                              className="block-headline mb3"
                    />
                    <div
                              className="markdown-block"
                              dangerouslySetInnerHTML={
                                        Object {
                                                  "__html": "",
                                                }
                              }
                    />
                    <div
                              className="flex flex-row flex-wrap items-center"
                    >
                              
                    </div>
          </div>
          <Image
                    alt=" illustration"
                    bg={false}
                    className="col-6 z-sub-nav mt2 mx-auto my-auto"
                    onImgLoad={[Function]}
                    src="?w=1400&fm=png&q=90"
                    style={
                              Object {
                                        "transform": "translate(0%, 0%)",
                                      }
                    }
          />
</div>,
        null,
      ],
      "className": "flex justify-center",
      "style": Object {
        "zIndex": 1,
      },
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="flex flex-column justify-center col-12 md-col-5"
>
              <h2
                            className="block-headline mb3"
              />
              <div
                            className="markdown-block"
                            dangerouslySetInnerHTML={
                                          Object {
                                                        "__html": "",
                                                      }
                            }
              />
              <div
                            className="flex flex-row flex-wrap items-center"
              >
                            
              </div>
</div>,
            <Image
              alt=" illustration"
              bg={false}
              className="col-6 z-sub-nav mt2 mx-auto my-auto"
              onImgLoad={[Function]}
              src="?w=1400&fm=png&q=90"
              style={
                            Object {
                                          "transform": "translate(0%, 0%)",
                                        }
              }
/>,
          ],
          "className": "flex container-width py4",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="block-headline mb3"
/>,
                <div
                  className="markdown-block"
                  dangerouslySetInnerHTML={
                                    Object {
                                                      "__html": "",
                                                    }
                  }
/>,
                <div
                  className="flex flex-row flex-wrap items-center"
>
                  
</div>,
                null,
              ],
              "className": "flex flex-column justify-center col-12 md-col-5",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "block-headline mb3",
                },
                "ref": null,
                "rendered": "",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "markdown-block",
                  "dangerouslySetInnerHTML": Object {
                    "__html": "",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    null,
                    null,
                  ],
                  "className": "flex flex-row flex-wrap items-center",
                },
                "ref": null,
                "rendered": Array [
                  null,
                  null,
                ],
                "type": "div",
              },
              null,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alt": " illustration",
              "bg": false,
              "children": null,
              "className": "col-6 z-sub-nav mt2 mx-auto my-auto",
              "onImgLoad": [Function],
              "src": "?w=1400&fm=png&q=90",
              "style": Object {
                "transform": "translate(0%, 0%)",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex container-width py4"
>
            <div
                        className="flex flex-column justify-center col-12 md-col-5"
            >
                        <h2
                                    className="block-headline mb3"
                        />
                        <div
                                    className="markdown-block"
                                    dangerouslySetInnerHTML={
                                                Object {
                                                            "__html": "",
                                                          }
                                    }
                        />
                        <div
                                    className="flex flex-row flex-wrap items-center"
                        >
                                    
                        </div>
            </div>
            <Image
                        alt=" illustration"
                        bg={false}
                        className="col-6 z-sub-nav mt2 mx-auto my-auto"
                        onImgLoad={[Function]}
                        src="?w=1400&fm=png&q=90"
                        style={
                                    Object {
                                                "transform": "translate(0%, 0%)",
                                              }
                        }
            />
</div>,
          null,
        ],
        "className": "flex justify-center",
        "style": Object {
          "zIndex": 1,
        },
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="flex flex-column justify-center col-12 md-col-5"
>
                <h2
                                className="block-headline mb3"
                />
                <div
                                className="markdown-block"
                                dangerouslySetInnerHTML={
                                                Object {
                                                                "__html": "",
                                                              }
                                }
                />
                <div
                                className="flex flex-row flex-wrap items-center"
                >
                                
                </div>
</div>,
              <Image
                alt=" illustration"
                bg={false}
                className="col-6 z-sub-nav mt2 mx-auto my-auto"
                onImgLoad={[Function]}
                src="?w=1400&fm=png&q=90"
                style={
                                Object {
                                                "transform": "translate(0%, 0%)",
                                              }
                }
/>,
            ],
            "className": "flex container-width py4",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="block-headline mb3"
/>,
                  <div
                    className="markdown-block"
                    dangerouslySetInnerHTML={
                                        Object {
                                                            "__html": "",
                                                          }
                    }
/>,
                  <div
                    className="flex flex-row flex-wrap items-center"
>
                    
</div>,
                  null,
                ],
                "className": "flex flex-column justify-center col-12 md-col-5",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "block-headline mb3",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "markdown-block",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      null,
                      null,
                    ],
                    "className": "flex flex-row flex-wrap items-center",
                  },
                  "ref": null,
                  "rendered": Array [
                    null,
                    null,
                  ],
                  "type": "div",
                },
                null,
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alt": " illustration",
                "bg": false,
                "children": null,
                "className": "col-6 z-sub-nav mt2 mx-auto my-auto",
                "onImgLoad": [Function],
                "src": "?w=1400&fm=png&q=90",
                "style": Object {
                  "transform": "translate(0%, 0%)",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
